--- a/1Projetosite/style.css
+++ b/1Projetosite/style.css
@@ -85,3 +85,21 @@
     background: rgb(148, 148, 219);
     color: rgb(10, 10, 10);
 }
+.formulario
+{
+width: 400px;
+padding: 30px;
+border:1px solid black ;
+}
+.section
+{
+margin: 50px;
+padding:20px;
+border: 1px black;
+}
+.nome{
+border: 1px solid black;
+background-color: aqua;
+padding: 60px;
+
+}
