--- a/1Projetosite/style.css
+++ b/1Projetosite/style.css
@@ -88,18 +88,15 @@
 .formulario
 {
 width: 400px;
-padding: 30px;
-border:1px solid black ;
 }
-.section
+
+.nome
 {
-margin: 50px;
-padding:20px;
-border: 1px black;
+padding: 10px;
 }
-.nome{
-border: 1px solid black;
-background-color: aqua;
-padding: 60px;
+
+.cola{
+
+background-color: orange;
 
 }
